--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,266 @@ build/x64/Release/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
 build/ZERO_CHECK.vcxproj
 build/ZERO_CHECK.vcxproj.filters
 CMakeLists.txt
+build/.vs/main/v16/ipch/AutoPCH/bbd6f423c9ce96da/MAIN.ipch
+build/.vs/main/v16/ipch/AutoPCH/c8aa6d116ebf26cc/MAIN.ipch
+build/Brain_1_deform.ply
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.A398F0D3.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5.A398F0D3.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5_moc_and_resources.lib.recipe
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/CGAL_Qt5_moc_and_resources.log
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/mocs_compilation_MinSizeRel.obj
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/qrc_CGAL.obj
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/qrc_File.obj
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/qrc_Input.obj
+build/CGAL_Qt5_moc_and_resources.dir/MinSizeRel/qrc_Triangulation_2.obj
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.A398F0D3.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5_moc_and_resources.Build.CppClean.log
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5_moc_and_resources.vcxproj.FileListAbsolute.txt
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5.A398F0D3.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5_moc_and_resources.lib.recipe
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/CGAL_Qt5_moc_and_resources.log
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/mocs_compilation_RelWithDebInfo.obj
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/qrc_CGAL.obj
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/qrc_File.obj
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/qrc_Input.obj
+build/CGAL_Qt5_moc_and_resources.dir/RelWithDebInfo/qrc_Triangulation_2.obj
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_camera.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_camera.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_DemosMainWindow.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_DemosMainWindow.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_frame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_frame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsItem.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsItem.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsViewInput.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsViewInput.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsViewNavigation.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_GraphicsViewNavigation.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_image_interface.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_image_interface.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_keyFrameInterpolator.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_keyFrameInterpolator.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_manipulatedCameraFrame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_manipulatedCameraFrame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_manipulatedFrame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_manipulatedFrame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_qglviewer.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_MinSizeRel/HDPIUTJDHZ/moc_qglviewer.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_camera.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_camera.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_DemosMainWindow.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_DemosMainWindow.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_frame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_frame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsItem.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsItem.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsViewInput.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsViewInput.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsViewNavigation.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_GraphicsViewNavigation.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_image_interface.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_image_interface.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_keyFrameInterpolator.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_keyFrameInterpolator.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_manipulatedCameraFrame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_manipulatedCameraFrame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_manipulatedFrame.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_manipulatedFrame.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_qglviewer.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/include_RelWithDebInfo/HDPIUTJDHZ/moc_qglviewer.cpp.d
+build/CGAL_Qt5_moc_and_resources_autogen/mocs_compilation_MinSizeRel.cpp
+build/CGAL_Qt5_moc_and_resources_autogen/mocs_compilation_RelWithDebInfo.cpp
+build/CMakeFiles/0076c4dfeb2ae7787f86c7a7c052b275/generate.stamp.rule
+build/CMakeFiles/3.20.1/CompilerIdC/Debug/vcpkg.applocal.log
+build/CMakeFiles/3.20.1/CompilerIdCXX/Debug/vcpkg.applocal.log
+build/CMakeFiles/CGAL_Qt5_moc_and_resources_autogen.dir/AutogenUsed_MinSizeRel.txt
+build/CMakeFiles/CGAL_Qt5_moc_and_resources_autogen.dir/AutogenUsed_RelWithDebInfo.txt
+build/CMakeFiles/CGAL_Qt5_moc_and_resources_autogen.dir/ParseCache_MinSizeRel.txt
+build/CMakeFiles/CGAL_Qt5_moc_and_resources_autogen.dir/ParseCache_RelWithDebInfo.txt
+build/main.dir/MinSizeRel/main.exe.recipe
+build/main.dir/MinSizeRel/main.log
+build/main.dir/MinSizeRel/main.obj
+build/main.dir/MinSizeRel/main.tlog/CL.command.1.tlog
+build/main.dir/MinSizeRel/main.tlog/CL.read.1.tlog
+build/main.dir/MinSizeRel/main.tlog/CL.write.1.tlog
+build/main.dir/MinSizeRel/main.tlog/CustomBuild.command.1.tlog
+build/main.dir/MinSizeRel/main.tlog/CustomBuild.read.1.tlog
+build/main.dir/MinSizeRel/main.tlog/CustomBuild.write.1.tlog
+build/main.dir/MinSizeRel/main.tlog/link.command.1.tlog
+build/main.dir/MinSizeRel/main.tlog/link.read.1.tlog
+build/main.dir/MinSizeRel/main.tlog/link.write.1.tlog
+build/main.dir/MinSizeRel/main.tlog/main.lastbuildstate
+build/main.dir/Release/main.Build.CppClean.log
+build/main.dir/Release/main.vcxproj.FileListAbsolute.txt
+build/main.dir/RelWithDebInfo/main.exe.recipe
+build/main.dir/RelWithDebInfo/main.log
+build/main.dir/RelWithDebInfo/main.obj
+build/main.dir/RelWithDebInfo/main.tlog/CL.command.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/CL.read.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/CL.write.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/CustomBuild.command.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/CustomBuild.read.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/CustomBuild.write.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/link.command.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/link.read.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/link.write.1.tlog
+build/main.dir/RelWithDebInfo/main.tlog/main.lastbuildstate
+build/main.dir/RelWithDebInfo/vc142.pdb
+build/MinSizeRel/brotlicommon.dll
+build/MinSizeRel/brotlidec.dll
+build/MinSizeRel/bz2.dll
+build/MinSizeRel/CGAL_Qt5_moc_and_resources.lib
+build/MinSizeRel/freetype.dll
+build/MinSizeRel/gmp.dll
+build/MinSizeRel/harfbuzz.dll
+build/MinSizeRel/icudt69.dll
+build/MinSizeRel/icuin69.dll
+build/MinSizeRel/icuuc69.dll
+build/MinSizeRel/jasper.dll
+build/MinSizeRel/jpeg62.dll
+build/MinSizeRel/libpng16.dll
+build/MinSizeRel/libwebpmux.dll
+build/MinSizeRel/lzma.dll
+build/MinSizeRel/main.exe
+build/MinSizeRel/mpfr-6.dll
+build/MinSizeRel/pcre2-16.dll
+build/MinSizeRel/plugins/iconengines/qsvgicon.dll
+build/MinSizeRel/plugins/imageformats/qgif.dll
+build/MinSizeRel/plugins/imageformats/qicns.dll
+build/MinSizeRel/plugins/imageformats/qico.dll
+build/MinSizeRel/plugins/imageformats/qjp2.dll
+build/MinSizeRel/plugins/imageformats/qjpeg.dll
+build/MinSizeRel/plugins/imageformats/qsvg.dll
+build/MinSizeRel/plugins/imageformats/qtga.dll
+build/MinSizeRel/plugins/imageformats/qtiff.dll
+build/MinSizeRel/plugins/imageformats/qwbmp.dll
+build/MinSizeRel/plugins/imageformats/qwebp.dll
+build/MinSizeRel/plugins/platforms/qwindows.dll
+build/MinSizeRel/plugins/styles/qwindowsvistastyle.dll
+build/MinSizeRel/qt.conf
+build/MinSizeRel/Qt5Core.dll
+build/MinSizeRel/Qt5Gui.dll
+build/MinSizeRel/Qt5OpenGL.dll
+build/MinSizeRel/Qt5Svg.dll
+build/MinSizeRel/Qt5Widgets.dll
+build/MinSizeRel/Qt5Xml.dll
+build/MinSizeRel/tiff.dll
+build/MinSizeRel/webp.dll
+build/MinSizeRel/webpdecoder.dll
+build/MinSizeRel/webpdemux.dll
+build/MinSizeRel/zlib1.dll
+build/MinSizeRel/zstd.dll
+build/Release/python36.dll
+build/RelWithDebInfo/brotlicommon.dll
+build/RelWithDebInfo/brotlidec.dll
+build/RelWithDebInfo/bz2.dll
+build/RelWithDebInfo/CGAL_Qt5_moc_and_resources.lib
+build/RelWithDebInfo/CGAL_Qt5_moc_and_resources.pdb
+build/RelWithDebInfo/freetype.dll
+build/RelWithDebInfo/gmp.dll
+build/RelWithDebInfo/harfbuzz.dll
+build/RelWithDebInfo/icudt69.dll
+build/RelWithDebInfo/icuin69.dll
+build/RelWithDebInfo/icuuc69.dll
+build/RelWithDebInfo/jasper.dll
+build/RelWithDebInfo/jpeg62.dll
+build/RelWithDebInfo/libpng16.dll
+build/RelWithDebInfo/libwebpmux.dll
+build/RelWithDebInfo/lzma.dll
+build/RelWithDebInfo/main.exe
+build/RelWithDebInfo/main.ilk
+build/RelWithDebInfo/main.pdb
+build/RelWithDebInfo/mpfr-6.dll
+build/RelWithDebInfo/pcre2-16.dll
+build/RelWithDebInfo/plugins/iconengines/qsvgicon.dll
+build/RelWithDebInfo/plugins/imageformats/qgif.dll
+build/RelWithDebInfo/plugins/imageformats/qicns.dll
+build/RelWithDebInfo/plugins/imageformats/qico.dll
+build/RelWithDebInfo/plugins/imageformats/qjp2.dll
+build/RelWithDebInfo/plugins/imageformats/qjpeg.dll
+build/RelWithDebInfo/plugins/imageformats/qsvg.dll
+build/RelWithDebInfo/plugins/imageformats/qtga.dll
+build/RelWithDebInfo/plugins/imageformats/qtiff.dll
+build/RelWithDebInfo/plugins/imageformats/qwbmp.dll
+build/RelWithDebInfo/plugins/imageformats/qwebp.dll
+build/RelWithDebInfo/plugins/platforms/qwindows.dll
+build/RelWithDebInfo/plugins/styles/qwindowsvistastyle.dll
+build/RelWithDebInfo/qt.conf
+build/RelWithDebInfo/Qt5Core.dll
+build/RelWithDebInfo/Qt5Gui.dll
+build/RelWithDebInfo/Qt5OpenGL.dll
+build/RelWithDebInfo/Qt5Svg.dll
+build/RelWithDebInfo/Qt5Widgets.dll
+build/RelWithDebInfo/Qt5Xml.dll
+build/RelWithDebInfo/tiff.dll
+build/RelWithDebInfo/webp.dll
+build/RelWithDebInfo/webpdecoder.dll
+build/RelWithDebInfo/webpdemux.dll
+build/RelWithDebInfo/zlib1.dll
+build/RelWithDebInfo/zstd.dll
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.log
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.recipe
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.command.1.tlog
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
+build/x64/MinSizeRel/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
+build/x64/Release/ALL_BUILD/ALL_BUILD.Build.CppClean.log
+build/x64/Release/ALL_BUILD/ALL_BUILD.log
+build/x64/Release/ALL_BUILD/ALL_BUILD.recipe
+build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/ALL_BUILD.lastbuildstate
+build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.command.1.tlog
+build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.read.1.tlog
+build/x64/Release/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.write.1.tlog
+build/x64/Release/ALL_BUILD/ALL_BUILD.vcxproj.FileListAbsolute.txt
+build/x64/Release/ZERO_CHECK/ZERO_CHECK.Build.CppClean.log
+build/x64/Release/ZERO_CHECK/ZERO_CHECK.vcxproj.FileListAbsolute.txt
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.log
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.recipe
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/ALL_BUILD.lastbuildstate
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.command.1.tlog
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.read.1.tlog
+build/x64/RelWithDebInfo/ALL_BUILD/ALL_BUILD.tlog/CustomBuild.write.1.tlog
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.log
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.recipe
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.command.1.tlog
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.read.1.tlog
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
+build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
+build/.vs/main/v16/ipch/AutoPCH/6623626b09b0893d/MAIN.ipch
+build/.vs/main/v16/ipch/AutoPCH/27665f37e2d37c33/MAIN.ipch
