--- a/.gitignore
+++ b/.gitignore
@@ -608,3 +608,413 @@ build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/CustomBuild.write.1.tlog
 build/x64/RelWithDebInfo/ZERO_CHECK/ZERO_CHECK.tlog/ZERO_CHECK.lastbuildstate
 build/.vs/main/v16/ipch/AutoPCH/6623626b09b0893d/MAIN.ipch
 build/.vs/main/v16/ipch/AutoPCH/27665f37e2d37c33/MAIN.ipch
+build/Output/Result/Final_Vertex1.ply
+build/Output/Result/Final_Vertex0.ply
+build/Output/null
+build/Output/BoundingBoxes/Brain2_4.ply
+build/Output/BoundingBoxes/Brain2_3.ply
+build/Output/BoundingBoxes/Brain2_2.ply
+build/Output/BoundingBoxes/Brain2_1.ply
+build/Output/BoundingBoxes/Brain1_4.ply
+build/Output/BoundingBoxes/Brain1_3.ply
+build/Output/BoundingBoxes/Brain1_2.ply
+build/Output/BoundingBoxes/Brain1_1.ply
+build/Output/BoundingBoxes/Box2_4.ply
+build/Output/BoundingBoxes/Box2_3.ply
+build/Output/BoundingBoxes/Box2_2.ply
+build/Output/BoundingBoxes/Box2_1.ply
+build/Output/BoundingBoxes/Box1_4.ply
+build/Output/BoundingBoxes/Box1_3.ply
+build/Output/BoundingBoxes/Box1_2.ply
+build/Output/BoundingBoxes/Box1_1.ply
+build/Output/2/Deform_Vertex950.ply
+build/Output/2/Deform_Vertex900.ply
+build/Output/2/Deform_Vertex850.ply
+build/Output/2/Deform_Vertex800.ply
+build/Output/2/Deform_Vertex750.ply
+build/Output/2/Deform_Vertex700.ply
+build/Output/2/Deform_Vertex650.ply
+build/Output/2/Deform_Vertex600.ply
+build/Output/2/Deform_Vertex550.ply
+build/Output/2/Deform_Vertex500.ply
+build/Output/2/Deform_Vertex50.ply
+build/Output/2/Deform_Vertex450.ply
+build/Output/2/Deform_Vertex400.ply
+build/Output/2/Deform_Vertex350.ply
+build/Output/2/Deform_Vertex300.ply
+build/Output/2/Deform_Vertex250.ply
+build/Output/2/Deform_Vertex2050.ply
+build/Output/2/Deform_Vertex2000.ply
+build/Output/2/Deform_Vertex200.ply
+build/Output/2/Deform_Vertex1950.ply
+build/Output/2/Deform_Vertex1900.ply
+build/Output/2/Deform_Vertex1850.ply
+build/Output/2/Deform_Vertex1800.ply
+build/Output/2/Deform_Vertex1750.ply
+build/Output/2/Deform_Vertex1700.ply
+build/Output/2/Deform_Vertex1650.ply
+build/Output/2/Deform_Vertex1600.ply
+build/Output/2/Deform_Vertex1550.ply
+build/Output/2/Deform_Vertex1500.ply
+build/Output/2/Deform_Vertex150.ply
+build/Output/2/Deform_Vertex1450.ply
+build/Output/2/Deform_Vertex1400.ply
+build/Output/2/Deform_Vertex1350.ply
+build/Output/2/Deform_Vertex1300.ply
+build/Output/2/Deform_Vertex1250.ply
+build/Output/2/Deform_Vertex1200.ply
+build/Output/2/Deform_Vertex1150.ply
+build/Output/2/Deform_Vertex1100.ply
+build/Output/2/Deform_Vertex1050.ply
+build/Output/2/Deform_Vertex1000.ply
+build/Output/2/Deform_Vertex100.ply
+build/Output/2/Deform_Vertex0.ply
+build/Output/1/Deform_Vertex950.ply
+build/Output/1/Deform_Vertex900.ply
+build/Output/1/Deform_Vertex850.ply
+build/Output/1/Deform_Vertex800.ply
+build/Output/1/Deform_Vertex7550.ply
+build/Output/1/Deform_Vertex7500.ply
+build/Output/1/Deform_Vertex750.ply
+build/Output/1/Deform_Vertex7450.ply
+build/Output/1/Deform_Vertex7400.ply
+build/Output/1/Deform_Vertex7350.ply
+build/Output/1/Deform_Vertex7300.ply
+build/Output/1/Deform_Vertex7250.ply
+build/Output/1/Deform_Vertex7200.ply
+build/Output/1/Deform_Vertex7150.ply
+build/Output/1/Deform_Vertex7100.ply
+build/Output/1/Deform_Vertex7050.ply
+build/Output/1/Deform_Vertex7000.ply
+build/Output/1/Deform_Vertex700.ply
+build/Output/1/Deform_Vertex6950.ply
+build/Output/1/Deform_Vertex6900.ply
+build/Output/1/Deform_Vertex6850.ply
+build/Output/1/Deform_Vertex6800.ply
+build/Output/1/Deform_Vertex6750.ply
+build/Output/1/Deform_Vertex6700.ply
+build/Output/1/Deform_Vertex6650.ply
+build/Output/1/Deform_Vertex6600.ply
+build/Output/1/Deform_Vertex6550.ply
+build/Output/1/Deform_Vertex6500.ply
+build/Output/1/Deform_Vertex650.ply
+build/Output/1/Deform_Vertex6450.ply
+build/Output/1/Deform_Vertex6400.ply
+build/Output/1/Deform_Vertex6350.ply
+build/Output/1/Deform_Vertex6300.ply
+build/Output/1/Deform_Vertex6250.ply
+build/Output/1/Deform_Vertex6200.ply
+build/Output/1/Deform_Vertex6150.ply
+build/Output/1/Deform_Vertex6100.ply
+build/Output/1/Deform_Vertex6050.ply
+build/Output/1/Deform_Vertex6000.ply
+build/Output/1/Deform_Vertex600.ply
+build/Output/1/Deform_Vertex5950.ply
+build/Output/1/Deform_Vertex5900.ply
+build/Output/1/Deform_Vertex5850.ply
+build/Output/1/Deform_Vertex5800.ply
+build/Output/1/Deform_Vertex5750.ply
+build/Output/1/Deform_Vertex5700.ply
+build/Output/1/Deform_Vertex5650.ply
+build/Output/1/Deform_Vertex5600.ply
+build/Output/1/Deform_Vertex5550.ply
+build/Output/1/Deform_Vertex5500.ply
+build/Output/1/Deform_Vertex550.ply
+build/Output/1/Deform_Vertex5450.ply
+build/Output/1/Deform_Vertex5400.ply
+build/Output/1/Deform_Vertex5350.ply
+build/Output/1/Deform_Vertex5300.ply
+build/Output/1/Deform_Vertex5250.ply
+build/Output/1/Deform_Vertex5200.ply
+build/Output/1/Deform_Vertex5150.ply
+build/Output/1/Deform_Vertex5100.ply
+build/Output/1/Deform_Vertex5050.ply
+build/Output/1/Deform_Vertex5000.ply
+build/Output/1/Deform_Vertex500.ply
+build/Output/1/Deform_Vertex50.ply
+build/Output/1/Deform_Vertex4950.ply
+build/Output/1/Deform_Vertex4900.ply
+build/Output/1/Deform_Vertex4850.ply
+build/Output/1/Deform_Vertex4800.ply
+build/Output/1/Deform_Vertex4750.ply
+build/Output/1/Deform_Vertex4700.ply
+build/Output/1/Deform_Vertex4650.ply
+build/Output/1/Deform_Vertex4600.ply
+build/Output/1/Deform_Vertex4550.ply
+build/Output/1/Deform_Vertex4500.ply
+build/Output/1/Deform_Vertex450.ply
+build/Output/1/Deform_Vertex4450.ply
+build/Output/1/Deform_Vertex4400.ply
+build/Output/1/Deform_Vertex4350.ply
+build/Output/1/Deform_Vertex4300.ply
+build/Output/1/Deform_Vertex4250.ply
+build/Output/1/Deform_Vertex4200.ply
+build/Output/1/Deform_Vertex4150.ply
+build/Output/1/Deform_Vertex4100.ply
+build/Output/1/Deform_Vertex4050.ply
+build/Output/1/Deform_Vertex4000.ply
+build/Output/1/Deform_Vertex400.ply
+build/Output/1/Deform_Vertex3950.ply
+build/Output/1/Deform_Vertex3900.ply
+build/Output/1/Deform_Vertex3850.ply
+build/Output/1/Deform_Vertex3800.ply
+build/Output/1/Deform_Vertex3750.ply
+build/Output/1/Deform_Vertex3700.ply
+build/Output/1/Deform_Vertex3650.ply
+build/Output/1/Deform_Vertex3600.ply
+build/Output/1/Deform_Vertex3550.ply
+build/Output/1/Deform_Vertex3500.ply
+build/Output/1/Deform_Vertex350.ply
+build/Output/1/Deform_Vertex3450.ply
+build/Output/1/Deform_Vertex3400.ply
+build/Output/1/Deform_Vertex3350.ply
+build/Output/1/Deform_Vertex3300.ply
+build/Output/1/Deform_Vertex3250.ply
+build/Output/1/Deform_Vertex3200.ply
+build/Output/1/Deform_Vertex3150.ply
+build/Output/1/Deform_Vertex3100.ply
+build/Output/1/Deform_Vertex3050.ply
+build/Output/1/Deform_Vertex3000.ply
+build/Output/1/Deform_Vertex300.ply
+build/Output/1/Deform_Vertex2950.ply
+build/Output/1/Deform_Vertex2900.ply
+build/Output/1/Deform_Vertex2850.ply
+build/Output/1/Deform_Vertex2800.ply
+build/Output/1/Deform_Vertex2750.ply
+build/Output/1/Deform_Vertex2700.ply
+build/Output/1/Deform_Vertex2650.ply
+build/Output/1/Deform_Vertex2600.ply
+build/Output/1/Deform_Vertex2550.ply
+build/Output/1/Deform_Vertex2500.ply
+build/Output/1/Deform_Vertex250.ply
+build/Output/1/Deform_Vertex2450.ply
+build/Output/1/Deform_Vertex2400.ply
+build/Output/1/Deform_Vertex2350.ply
+build/Output/1/Deform_Vertex2300.ply
+build/Output/1/Deform_Vertex2250.ply
+build/Output/1/Deform_Vertex2200.ply
+build/Output/1/Deform_Vertex2150.ply
+build/Output/1/Deform_Vertex2100.ply
+build/Output/1/Deform_Vertex2050.ply
+build/Output/1/Deform_Vertex2000.ply
+build/Output/1/Deform_Vertex200.ply
+build/Output/1/Deform_Vertex1950.ply
+build/Output/1/Deform_Vertex1900.ply
+build/Output/1/Deform_Vertex1850.ply
+build/Output/1/Deform_Vertex1800.ply
+build/Output/1/Deform_Vertex1750.ply
+build/Output/1/Deform_Vertex1700.ply
+build/Output/1/Deform_Vertex1650.ply
+build/Output/1/Deform_Vertex1600.ply
+build/Output/1/Deform_Vertex1550.ply
+build/Output/1/Deform_Vertex1500.ply
+build/Output/1/Deform_Vertex150.ply
+build/Output/1/Deform_Vertex1450.ply
+build/Output/1/Deform_Vertex1400.ply
+build/Output/1/Deform_Vertex1350.ply
+build/Output/1/Deform_Vertex1300.ply
+build/Output/1/Deform_Vertex1250.ply
+build/Output/1/Deform_Vertex1200.ply
+build/Output/1/Deform_Vertex1150.ply
+build/Output/1/Deform_Vertex1100.ply
+build/Output/1/Deform_Vertex1050.ply
+build/Output/1/Deform_Vertex1000.ply
+build/Output/1/Deform_Vertex100.ply
+build/Output/1/Deform_Vertex0.ply
+build/Output/0/Deform_Vertex950.ply
+build/Output/0/Deform_Vertex900.ply
+build/Output/0/Deform_Vertex850.ply
+build/Output/0/Deform_Vertex800.ply
+build/Output/0/Deform_Vertex7550.ply
+build/Output/0/Deform_Vertex7500.ply
+build/Output/0/Deform_Vertex750.ply
+build/Output/0/Deform_Vertex7450.ply
+build/Output/0/Deform_Vertex7400.ply
+build/Output/0/Deform_Vertex7350.ply
+build/Output/0/Deform_Vertex7300.ply
+build/Output/0/Deform_Vertex7250.ply
+build/Output/0/Deform_Vertex7200.ply
+build/Output/0/Deform_Vertex7150.ply
+build/Output/0/Deform_Vertex7100.ply
+build/Output/0/Deform_Vertex7050.ply
+build/Output/0/Deform_Vertex7000.ply
+build/Output/0/Deform_Vertex700.ply
+build/Output/0/Deform_Vertex6950.ply
+build/Output/0/Deform_Vertex6900.ply
+build/Output/0/Deform_Vertex6850.ply
+build/Output/0/Deform_Vertex6800.ply
+build/Output/0/Deform_Vertex6750.ply
+build/Output/0/Deform_Vertex6700.ply
+build/Output/0/Deform_Vertex6650.ply
+build/Output/0/Deform_Vertex6600.ply
+build/Output/0/Deform_Vertex6550.ply
+build/Output/0/Deform_Vertex6500.ply
+build/Output/0/Deform_Vertex650.ply
+build/Output/0/Deform_Vertex6450.ply
+build/Output/0/Deform_Vertex6400.ply
+build/Output/0/Deform_Vertex6350.ply
+build/Output/0/Deform_Vertex6300.ply
+build/Output/0/Deform_Vertex6250.ply
+build/Output/0/Deform_Vertex6200.ply
+build/Output/0/Deform_Vertex6150.ply
+build/Output/0/Deform_Vertex6100.ply
+build/Output/0/Deform_Vertex6050.ply
+build/Output/0/Deform_Vertex6000.ply
+build/Output/0/Deform_Vertex600.ply
+build/Output/0/Deform_Vertex5950.ply
+build/Output/0/Deform_Vertex5900.ply
+build/Output/0/Deform_Vertex5850.ply
+build/Output/0/Deform_Vertex5800.ply
+build/Output/0/Deform_Vertex5750.ply
+build/Output/0/Deform_Vertex5700.ply
+build/Output/0/Deform_Vertex5650.ply
+build/Output/0/Deform_Vertex5600.ply
+build/Output/0/Deform_Vertex5550.ply
+build/Output/0/Deform_Vertex5500.ply
+build/Output/0/Deform_Vertex550.ply
+build/Output/0/Deform_Vertex5450.ply
+build/Output/0/Deform_Vertex5400.ply
+build/Output/0/Deform_Vertex5350.ply
+build/Output/0/Deform_Vertex5300.ply
+build/Output/0/Deform_Vertex5250.ply
+build/Output/0/Deform_Vertex5200.ply
+build/Output/0/Deform_Vertex5150.ply
+build/Output/0/Deform_Vertex5100.ply
+build/Output/0/Deform_Vertex5050.ply
+build/Output/0/Deform_Vertex5000.ply
+build/Output/0/Deform_Vertex500.ply
+build/Output/0/Deform_Vertex50.ply
+build/Output/0/Deform_Vertex4950.ply
+build/Output/0/Deform_Vertex4900.ply
+build/Output/0/Deform_Vertex4850.ply
+build/Output/0/Deform_Vertex4800.ply
+build/Output/0/Deform_Vertex4750.ply
+build/Output/0/Deform_Vertex4700.ply
+build/Output/0/Deform_Vertex4650.ply
+build/Output/0/Deform_Vertex4600.ply
+build/Output/0/Deform_Vertex4550.ply
+build/Output/0/Deform_Vertex4500.ply
+build/Output/0/Deform_Vertex450.ply
+build/Output/0/Deform_Vertex4450.ply
+build/Output/0/Deform_Vertex4400.ply
+build/Output/0/Deform_Vertex4350.ply
+build/Output/0/Deform_Vertex4300.ply
+build/Output/0/Deform_Vertex4250.ply
+build/Output/0/Deform_Vertex4200.ply
+build/Output/0/Deform_Vertex4150.ply
+build/Output/0/Deform_Vertex4100.ply
+build/Output/0/Deform_Vertex4050.ply
+build/Output/0/Deform_Vertex4000.ply
+build/Output/0/Deform_Vertex400.ply
+build/Output/0/Deform_Vertex3950.ply
+build/Output/0/Deform_Vertex3900.ply
+build/Output/0/Deform_Vertex3850.ply
+build/Output/0/Deform_Vertex3800.ply
+build/Output/0/Deform_Vertex3750.ply
+build/Output/0/Deform_Vertex3700.ply
+build/Output/0/Deform_Vertex3650.ply
+build/Output/0/Deform_Vertex3600.ply
+build/Output/0/Deform_Vertex3550.ply
+build/Output/0/Deform_Vertex3500.ply
+build/Output/0/Deform_Vertex350.ply
+build/Output/0/Deform_Vertex3450.ply
+build/Output/0/Deform_Vertex3400.ply
+build/Output/0/Deform_Vertex3350.ply
+build/Output/0/Deform_Vertex3300.ply
+build/Output/0/Deform_Vertex3250.ply
+build/Output/0/Deform_Vertex3200.ply
+build/Output/0/Deform_Vertex3150.ply
+build/Output/0/Deform_Vertex3100.ply
+build/Output/0/Deform_Vertex3050.ply
+build/Output/0/Deform_Vertex3000.ply
+build/Output/0/Deform_Vertex300.ply
+build/Output/0/Deform_Vertex2950.ply
+build/Output/0/Deform_Vertex2900.ply
+build/Output/0/Deform_Vertex2850.ply
+build/Output/0/Deform_Vertex2800.ply
+build/Output/0/Deform_Vertex2750.ply
+build/Output/0/Deform_Vertex2700.ply
+build/Output/0/Deform_Vertex2650.ply
+build/Output/0/Deform_Vertex2600.ply
+build/Output/0/Deform_Vertex2550.ply
+build/Output/0/Deform_Vertex2500.ply
+build/Output/0/Deform_Vertex250.ply
+build/Output/0/Deform_Vertex2450.ply
+build/Output/0/Deform_Vertex2400.ply
+build/Output/0/Deform_Vertex2350.ply
+build/Output/0/Deform_Vertex2300.ply
+build/Output/0/Deform_Vertex2250.ply
+build/Output/0/Deform_Vertex2200.ply
+build/Output/0/Deform_Vertex2150.ply
+build/Output/0/Deform_Vertex2100.ply
+build/Output/0/Deform_Vertex2050.ply
+build/Output/0/Deform_Vertex2000.ply
+build/Output/0/Deform_Vertex200.ply
+build/Output/0/Deform_Vertex1950.ply
+build/Output/0/Deform_Vertex1900.ply
+build/Output/0/Deform_Vertex1850.ply
+build/Output/0/Deform_Vertex1800.ply
+build/Output/0/Deform_Vertex1750.ply
+build/Output/0/Deform_Vertex1700.ply
+build/Output/0/Deform_Vertex1650.ply
+build/Output/0/Deform_Vertex1600.ply
+build/Output/0/Deform_Vertex1550.ply
+build/Output/0/Deform_Vertex1500.ply
+build/Output/0/Deform_Vertex150.ply
+build/Output/0/Deform_Vertex1450.ply
+build/Output/0/Deform_Vertex1400.ply
+build/Output/0/Deform_Vertex1350.ply
+build/Output/0/Deform_Vertex1300.ply
+build/Output/0/Deform_Vertex1250.ply
+build/Output/0/Deform_Vertex1200.ply
+build/Output/0/Deform_Vertex1150.ply
+build/Output/0/Deform_Vertex1100.ply
+build/Output/0/Deform_Vertex1050.ply
+build/Output/0/Deform_Vertex1000.ply
+build/Output/0/Deform_Vertex100.ply
+build/Output/0/Deform_Vertex0.ply
+build/null)
+build/CMakeFiles/a36f7fc00daa4e0f6674e3f9384d4c3f/generate.stamp.rule
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Release/CGAL_Qt5.F4E9C8E7.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/Lib.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/Lib-link.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/Lib-link.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CustomBuild.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CL.write.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CL.read.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CL.command.1.tlog
+build/CGAL_Qt5_moc_and_resources.dir/Debug/CGAL_Qt5.F4E9C8E7.tlog/CGAL_Qt5_moc_and_resources.lastbuildstate
+build/.vs/main/v16/ipch/AutoPCH/16f06a99ea21da2f/MAIN.ipch
+build/Output/2/Deform_Vertex2450.ply
+build/Output/2/Deform_Vertex2400.ply
+build/Output/2/Deform_Vertex2350.ply
+build/Output/2/Deform_Vertex2300.ply
+build/Output/2/Deform_Vertex2250.ply
+build/Output/2/Deform_Vertex2200.ply
+build/Output/2/Deform_Vertex2150.ply
+build/Output/2/Deform_Vertex2100.ply
+build/Output/2/Deform_Vertex2500.ply
+build/Logs/null
+build/Output/2/Deform_Vertex2550.ply
+build/Output/2/Deform_Vertex2600.ply
+build/Output/2/Deform_Vertex2650.ply
+build/Output/2/Deform_Vertex2700.ply
+build/Output/2/Deform_Vertex2750.ply
+build/Output/2/Deform_Vertex2800.ply
+build/Output/2/Deform_Vertex2850.ply
+build/Output/2/Deform_Vertex2900.ply
+build/Output/2/Deform_Vertex2950.ply
+build/Output/2/Deform_Vertex3000.ply
+build/Output/2/Deform_Vertex3050.ply
+build/Output/2/Deform_Vertex3100.ply
